Alignment fixed

--- a/frontend/plant-pod-companion/src/app/room-overview-page/room-overview-page.component.scss
+++ b/frontend/plant-pod-companion/src/app/room-overview-page/room-overview-page.component.scss
@@ -3,21 +3,31 @@
 .vertical-line {
 display: block;
 width: auto;
-margin: 2rem;
+margin: 1.5rem;
+margin-left:4rem;
+float:left;
 }
 
 .img {
   width: 15rem;
   height: 10rem;
+  margin-top:0.5rem;
+  margin-left:0.8rem;
+  display: inline-block;
 }
 
 .text-card-item {
   width: 20rem;
   padding: 1rem;
   text-align: center;
+  display: inline-block;
 }
 
 .flex-container {
   padding: 0;
   display: flex;
+}
+
+.container{
+  text-align:justify;
 }
